--- a/opmaakvoor.css
+++ b/opmaakvoor.css
@@ -26,7 +26,7 @@ a:visited {
 }
 
 a:hover {
-    background-color: blue;
+    background-image: url("https://i.giphy.com/media/13lXLDi3tLSaTC/giphy.webp%22);
 }
 
 a:active {
